--- a/packages/easy-fractional-indexing/readme.hbs
+++ b/packages/easy-fractional-indexing/readme.hbs
@@ -1,3 +1,2 @@
-A convenient wrapper around [fractional-indexing](https://github.com/rocicorp/fractional-indexing/).
-
+A convenient wrapper around [fractional-indexing](https://github.com/rocicorp/fractional-indexing/), sticking with version 2.1.0 of that library since ESM only modules are currently inconvenient for small Electron projects.
 {{>main}}
